# SAC

./: Cargo.toml  Dockerfile  README.md  index.sh
.github/workflows/: beta.yml  build-beta.yml  build-dep.yml  build-sac-spec.yml  build.yml
k8s/: deply.yaml  deply.yml  sac.yaml  svc1.1.yml
sac/: Cargo.toml
sac/src/: main.rs  test.rs
scripts/: eks-installation.sh  mk-installation.sh  sac-installation.sh  svc-installation.sh  tkn-validation.sh
src/: main.rs
