[package]
name = "ec_sac_beta"
version = "0.1.1"
edition = "2018"
publish = false

[dependencies]
#rocket = { path = "../../core/lib" }
rocket = "0.4.10"
reqwest = { version = "0.11", features = ["json"] } # reqwest with JSON parsing support
futures = "0.3" # for our async / await blocks
tokio = { version = "1.12.0", features = ["full"] } # for our async runtime
