[package]
name = "sac"
version = "0.1.1"
edition = "2018"
publish = false

#deprecated
#[dependencies]
#rocket = { path = "../../core/lib" }
#rocket = "0.4.10"
[dependencies]
bytes = "1"
futures-core = { version = "0.3", default-features = false }
futures-channel = "0.3"
futures-util = { version = "0.3", default-features = false }
http = "0.2"
http-body = "0.4"
httpdate = "1.0"
httparse = "1.6"
h2 = { version = "0.3.9", optional = true }
itoa = "1"
tracing = { version = "0.1", default-features = false, features = ["std"] }
pin-project-lite = "0.2.4"
tower-service = "0.3"
tokio = { version = "1", features = ["sync"] }
want = "0.3"

#include = ["src/**/*","Cargo.toml"]

[dev-dependencies]
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
matches = "0.1"
num_cpus = "1.0"
pretty_env_logger = "0.4"
spmc = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = [
    "fs",
    "macros",
    "io-std",
    "io-util",
    "rt",
    "rt-multi-thread", # so examples can use #[tokio::main]
    "sync",
    "time",
    "test-util",
] }
tokio-test = "0.4"
tokio-util = { version = "0.6", features = ["codec"] }
tower = { version = "0.4", features = ["make", "util"] }
url = "2.2"

[features]
# HTTP versions
http1 = []
http2 = ["h2"]

# Client/Server
client = []
server = []

# `impl Stream` for things
stream = []

# Tokio support
runtime = [
    "tcp",
    "tokio/rt",
    "tokio/time",
]
tcp = [
    "socket2",
    "tokio/net",
    "tokio/rt",
    "tokio/time",
]

# C-API support (currently unstable (no semver))
ffi = ["libc"]

# internal features used in CI
nightly = []
__internal_happy_eyeballs_tests = []
