[package]
name = "sac"
version = "0.1.1"
edition = "2018"
publish = false

#deprecated
#[dependencies]
#rocket = { path = "../../core/lib" }
#rocket = "0.4.10"

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
matches = "0.1"
num_cpus = "1.0"
pretty_env_logger = "0.4"
spmc = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = [
    "fs",
    "macros",
    "io-std",
    "io-util",
    "rt",
    "rt-multi-thread", # so examples can use #[tokio::main]
    "sync",
    "time",
    "test-util",
] }
tokio-test = "0.4"
tokio-util = { version = "0.6", features = ["codec"] }
tower = { version = "0.4", features = ["make", "util"] }
url = "2.2"
